fix: record packHash on committed baselines and reject inconsistent run JSON
Load-time integrity stops forged metrics from gating PASS. Live/nightly
keep quality numbers; fixture baselines recaptured without LLM.

Co-authored-by: Cursor <cursoragent@cursor.com>